netdata: Fix step CMD in Dockerfile
Fix command in CMD step

--- a/applications/netdata/Dockerfile
+++ b/applications/netdata/Dockerfile
@@ -2,27 +2,24 @@ FROM centos:latest
 
 RUN yum install epel-release -y
 
-RUN  yum update -yum
+RUN yum update -y
 
 # Requirements
-RUN yum install git autoconf automake curl gcc git libmnl-devel libuuid-devel lm-sensors make MySQL-python nc pkgconfig python python-psycopg2 PyYAML zlib-devel zlib libuuid
+RUN yum install git autoconf automake curl gcc git libmnl-devel libuuid-devel lm_sensors make \
+    MySQL-python nc pkgconfig python python-psycopg2 PyYAML zlib-devel zlib libuuid -y
 
 # Plugins
-RUN yum install iproute python-yaml python-mysqldb python-psycopg2 python-pymongo nodejs libmnl nc lm_sensors MySQL-python
+RUN yum install iproute python-yaml python-psycopg2 python-pymongo nodejs libmnl nc lm_sensors MySQL-python -y
 
 RUN git clone https://github.com/firehol/netdata.git --depth=1 && \
     cd netdata && \
-    ./netdata-installer.sh --install /opt --dont-start-it && \
-    cp system/netdata.service /etc/systemd/system/ &&\
-    systemctl daemon-reload && \
-    systemctl enable netdata && \
-    systemctl start netdata
+    ./netdata-installer.sh --install /opt --dont-start-it --dont-wait
 
 # Memory de-duplication instructions
-RUN echo 1 >/sys/kernel/mm/ksm/run && \
-    echo 1000 >/sys/kernel/mm/ksm/sleep_millisecs
+#RUN echo 1 > /sys/kernel/mm/ksm/run && \
+#    echo 1000 > /sys/kernel/mm/ksm/sleep_millisecs
 
 ENV NETDATA_PORT 19999
 EXPOSE $NETDATA_PORT
 
-CMD /opt/netdata/usr/sbin/netdata
+CMD /opt/netdata/usr/sbin/netdata -D
