Fix docker, remove some vars

--- a/applications/netdata/Dockerfile
+++ b/applications/netdata/Dockerfile
@@ -2,11 +2,9 @@ FROM centos:latest
 
 RUN yum install epel-release -y
 
-RUN yum update -y
-
 # Requirements
 RUN yum install git autoconf automake curl gcc git libmnl-devel libuuid-devel lm_sensors make \
-    MySQL-python nc pkgconfig python python-psycopg2 PyYAML zlib-devel zlib libuuid -y
+    MySQL-python nc pkgconfig python python-psycopg2 PyYAML zlib-devel zlib libuuid net-tools -y
 
 # Plugins
 RUN yum install iproute python-yaml python-psycopg2 python-pymongo nodejs libmnl nc lm_sensors MySQL-python -y
@@ -15,11 +13,7 @@ RUN git clone https://github.com/firehol/netdata.git --depth=1 && \
     cd netdata && \
     ./netdata-installer.sh --install /opt --dont-start-it --dont-wait
 
-# Memory de-duplication instructions
-#RUN echo 1 > /sys/kernel/mm/ksm/run && \
-#    echo 1000 > /sys/kernel/mm/ksm/sleep_millisecs
-
 ENV NETDATA_PORT 19999
-EXPOSE $NETDATA_PORT
+EXPOSE ${NETDATA_PORT}
 
-CMD /opt/netdata/usr/sbin/netdata -D
+CMD /opt/netdata/usr/sbin/netdata -D -p ${NETDATA_PORT}
